tests/baselines/reference/checkMergedGlobalUMDSymbol.errors.txt
global.d.ts(3,21): error TS2451: Cannot redeclare block-scoped variable 'THREE'.
global.d.ts(6,16): error TS2451: Cannot redeclare block-scoped variable 'THREE'.


==== three.d.ts (0 errors) ====
    export namespace THREE {
      export class Vector2 {}
    }
    
==== global.d.ts (2 errors) ====
    import * as _three from './three';
    
    export as namespace THREE;
                        ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'THREE'.
!!! related TS6203 global.d.ts:6:16: 'THREE' was also declared here.
    
    declare global {
      export const THREE: typeof _three;
                   ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'THREE'.
!!! related TS6203 global.d.ts:3:21: 'THREE' was also declared here.
    }
    
==== test.ts (0 errors) ====
    const m = THREE
    